# lesson_generator_poc

./: pyproject.toml
